@startuml 67Bet_ApplicationLayer
!theme plain
scale max 2200 width
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false
hide empty members

title 67Bet - Diagram warstwy aplikacji / logiki biznesowej

legend right
  <<implemented>> - element istnieje w aktualnym kodzie
  <<planned>> - element planowany lub integracja przewidziana w zalozeniach
  Linia z pustym trojkatem - implementacja interfejsu
  Linia przerywana - zaleznosc od kontraktu/repozytorium lub planowana integracja
endlegend

package "Identity Application" {
    interface IIdentityService <<implemented>> {
        +GetUserByIdAsync(userId: Guid) : Task<User?>
        +GetUserByEmailAsync(email: string) : Task<User?>
        +RegisterAsync(username: string, email: string, password: string) : Task<User>
        +AuthenticateAsync(email: string, password: string) : Task<bool>
    }

    class IdentityService <<implemented>> {
        -_userRepository : IUserRepository
        +GetUserByIdAsync(userId: Guid) : Task<User?>
        +GetUserByEmailAsync(email: string) : Task<User?>
        +RegisterAsync(username: string, email: string, password: string) : Task<User>
        +AuthenticateAsync(email: string, password: string) : Task<bool>
    }
}

package "Wallet Application" {
    interface IWalletService <<implemented>> {
        +GetBalanceAsync(userId: Guid) : Task<decimal>
        +DepositAsync(userId: Guid, amount: decimal) : Task
        +WithdrawAsync(userId: Guid, amount: decimal) : Task
        +ProcessStakeAsync(userId: Guid, amount: decimal) : Task<bool>
        +ProcessPayoutAsync(userId: Guid, amount: decimal) : Task
        +GetWalletByUserIdAsync(userId: Guid) : Task<Wallet?>
    }

    class WalletService <<implemented>> {
        -_walletRepository : IWalletRepository
        -_transactionRepository : ITransactionRepository
        +GetBalanceAsync(userId: Guid) : Task<decimal>
        +DepositAsync(userId: Guid, amount: decimal) : Task
        +WithdrawAsync(userId: Guid, amount: decimal) : Task
        +ProcessStakeAsync(userId: Guid, amount: decimal) : Task<bool>
        +ProcessPayoutAsync(userId: Guid, amount: decimal) : Task
        +GetWalletByUserIdAsync(userId: Guid) : Task<Wallet?>
        -GetOrCreateWalletAsync(userId: Guid) : Task<Wallet>
    }
}

package "Betting Application" {
    interface IBettingService <<implemented>> {
        +GetActiveEventsAsync() : Task<IEnumerable<Event>>
        +PlaceTicketAsync(userId: Guid, stake: decimal, outcomeIds: IEnumerable<Guid>) : Task<Ticket>
        +SettleEventAsync(eventId: Guid, winningOutcomeIds: List<Guid>) : Task
        +GetTicketByIdAsync(ticketId: Guid) : Task<Ticket?>
        +GetUserTicketsAsync(userId: Guid) : Task<IEnumerable<Ticket>>
    }

    class BettingService <<implemented>> {
        -_eventRepository : IEventRepository
        -_marketRepository : IMarketRepository
        -_ticketRepository : ITicketRepository
        +GetActiveEventsAsync() : Task<IEnumerable<Event>>
        +PlaceTicketAsync(userId: Guid, stake: decimal, outcomeIds: IEnumerable<Guid>) : Task<Ticket>
        +SettleEventAsync(eventId: Guid, winningOutcomeIds: List<Guid>) : Task
        +GetTicketByIdAsync(ticketId: Guid) : Task<Ticket?>
        +GetUserTicketsAsync(userId: Guid) : Task<IEnumerable<Ticket>>
    }

    interface ISettlementService <<planned>> {
        +SettleTicketsForEventAsync(eventId: Guid) : Task
        +SettleTicketAsync(ticketId: Guid) : Task
    }

    class SettlementService <<planned>>
}

package "Odds Application" {
    interface IOddsService <<implemented>> {
        +CalculateOddsAsync(probability: decimal) : Task<decimal>
        +UpdateMarketOddsAsync(marketId: Guid) : Task
        +GetLiveProbabilityAsync(eventId: Guid, contextJson: string) : Task<decimal>
    }

    class OddsService <<implemented>> {
        +CalculateOddsAsync(probability: decimal) : Task<decimal>
        +UpdateMarketOddsAsync(marketId: Guid) : Task
        +GetLiveProbabilityAsync(eventId: Guid, contextJson: string) : Task<decimal>
    }
}

package "Custom Bet Application" {
    interface ICustomBetService <<implemented>> {
        +CreateRequestAsync(userId: Guid, description: string) : Task<CustomBetRequest>
        +GetUserRequestsAsync(userId: Guid) : Task<IEnumerable<CustomBetRequest>>
        +GetPendingRequestsAsync() : Task<IEnumerable<CustomBetRequest>>
        +AcceptRequestAsync(requestId: Guid, finalOdds: decimal, adminNote: string?) : Task
        +RejectRequestAsync(requestId: Guid, reason: string) : Task
    }

    class CustomBetService <<implemented>> {
        -_customBetRepository : ICustomBetRepository
        +CreateRequestAsync(userId: Guid, description: string) : Task<CustomBetRequest>
        +GetUserRequestsAsync(userId: Guid) : Task<IEnumerable<CustomBetRequest>>
        +GetPendingRequestsAsync() : Task<IEnumerable<CustomBetRequest>>
        +AcceptRequestAsync(requestId: Guid, finalOdds: decimal, adminNote: string?) : Task
        +RejectRequestAsync(requestId: Guid, reason: string) : Task
    }
}

package "Domain repository contracts used by Application" {
    interface IUserRepository <<implemented>>
    interface IWalletRepository <<implemented>>
    interface ITransactionRepository <<implemented>>
    interface IEventRepository <<implemented>>
    interface IMarketRepository <<implemented>>
    interface ITicketRepository <<implemented>>
    interface ICustomBetRepository <<implemented>>
}

package "Domain types returned/used" {
    class User <<domain>>
    class Wallet <<domain>>
    class Event <<domain>>
    class Ticket <<domain>>
    class CustomBetRequest <<domain>>
}

' Implementacje interfejsow aplikacyjnych
IIdentityService <|.. IdentityService
IWalletService <|.. WalletService
IBettingService <|.. BettingService
IOddsService <|.. OddsService
ICustomBetService <|.. CustomBetService
ISettlementService <|.. SettlementService

' Zaleznosci serwisow aplikacyjnych od kontraktow repozytoriow
IdentityService ..> IUserRepository : uses
WalletService ..> IWalletRepository : uses
WalletService ..> ITransactionRepository : uses
BettingService ..> IEventRepository : uses
BettingService ..> IMarketRepository : uses
BettingService ..> ITicketRepository : uses
CustomBetService ..> ICustomBetRepository : uses

' Uzywane typy domenowe
IIdentityService ..> User
IWalletService ..> Wallet
IBettingService ..> Event
IBettingService ..> Ticket
ICustomBetService ..> CustomBetRequest

' Planowane integracje miedzy mikroserwisami / elementami aplikacyjnymi
BettingService ..> IWalletService : stake/payout through API (planned integration)
CustomBetService ..> IOddsService : AI odds suggestion (planned integration)
SettlementService ..> ITicketRepository : planned settlement
SettlementService ..> IWalletService : planned payout

note bottom of BettingService
W aktualnym kodzie BettingService korzysta z repozytoriow:
IEventRepository, IMarketRepository i ITicketRepository.
Integracja z WalletService jest pokazana jako planowana,
bo wynika z zalozen systemu finansowego.
end note

note right of OddsService
OddsService istnieje w warstwie aplikacji.
Na tym etapie wyliczanie kursow jest uproszczone,
a pelna integracja ML.NET pozostaje kierunkiem rozwoju.
end note

@enduml
